--- a/app/src/main/res/layout/item_view_segment.xml
+++ b/app/src/main/res/layout/item_view_segment.xml
@@ -7,7 +7,7 @@ android:layout_marginTop="1px">
 
 
 <android.support.v7.widget.CardView
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/frameCardViewSegment"
     android:layout_below="@+id/frameLayout"
@@ -18,8 +18,8 @@ android:layout_marginTop="1px">
 
 
     <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="match_parent">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
