--- a/app/src/main/res/layout/fragment_create_comment.xml
+++ b/app/src/main/res/layout/fragment_create_comment.xml
@@ -1,60 +1,34 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
+             android:orientation="vertical"
+             android:layout_weight="1"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             xmlns:app="http://schemas.android.com/apk/res-auto"
              tools:context="gppmds.wikilegis.view.CreateSuggestProposal"
              android:background="@drawable/background">
 
-    <LinearLayout
+    <android.support.v7.widget.RecyclerView
+        android:layout_marginTop="50dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:layout_height="0dp"
+        android:layout_weight="0.9"
+        android:id="@+id/recyclerViewComment"
+        android:background="@android:color/transparent"
+        android:layout_alignStart="@+id/frameLayoutProposal"
+        android:layout_alignEnd="@+id/frameLayoutProposal"
+        android:layout_below="@+id/frameLayoutProposal"/>
+    
+    <EditText
+        android:layout_height="0dp"
+        android:isScrollContainer="true"
+        android:minHeight="120dp"
+        android:inputType="textMultiLine"
+        android:layout_width="match_parent"
+        android:id="@+id/commentEditText"
+        android:background="@color/cardview_light_background"
+        android:padding="5dp"
+        android:hint="Digite seu comentário"
+        android:layout_margin="1dp"
+        android:layout_weight="0.1"/>
 
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:id="@+id/frameCardViewSegment"
-            android:background="@color/cardview_light_background"
-            app:cardElevation="7dp">
-
-                <LinearLayout
-                    android:padding="10dp"
-                    android:orientation="vertical"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <TextView
-                        android:padding="10dp"
-                        android:textSize="16sp"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:text="Digite seu comentário" />
-
-                    <EditText
-                        android:id="@+id/commentEditText"
-                        style="@style/FullWidthEditText"
-                        android:scrollbars="vertical"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
-
-                </LinearLayout>
-
-        </android.support.v7.widget.CardView>
-
-        <Button
-            android:id="@+id/saveComment"
-            android:background="@drawable/button_green"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:text="Salvar comentário"/>
-
-    </LinearLayout>
-
-</FrameLayout>
+</LinearLayout>
