Adding fragment and xml of search bill.
Signed-off-by: Marcelo Augusto <mekmay@hotmail.com>
Signed-off-by: Thiago Nogueira <thiagonf10@gmail.com>

--- a/app/src/main/res/layout/fragment_search_bill.xml
+++ b/app/src/main/res/layout/fragment_search_bill.xml
@@ -1,13 +1,16 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:orientation="vertical"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@drawable/background"
+              tools:context=".view.SearchBillFragment">
+
+<android.support.v7.widget.RecyclerView
+    android:layout_marginTop="65dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="gppmds.wikilegis.view.SearchBill">
+    android:id="@+id/recycler_view_search"/>
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-
-</FrameLayout>
+</LinearLayout>
