--- a/app/src/main/res/layout/fragment_create_suggest_proposal.xml
+++ b/app/src/main/res/layout/fragment_create_suggest_proposal.xml
@@ -1,60 +1,51 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             xmlns:app="http://schemas.android.com/apk/res-auto"
-             tools:context="gppmds.wikilegis.view.CreateSuggestProposal"
-             android:background="@drawable/background">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:orientation="vertical"
+              android:layout_weight="1"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              tools:context="gppmds.wikilegis.view.CreateSuggestProposal"
+              android:background="@drawable/background">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+<android.support.v7.widget.RecyclerView
+    android:layout_marginTop="50dp"
+    android:layout_width="match_parent"
+    android:layout_height="0dp"
+    android:layout_weight="0.9"
+    android:id="@+id/recyclerViewComment"
+    android:background="@android:color/transparent"
+    android:layout_alignStart="@+id/frameLayoutProposal"
+    android:layout_alignEnd="@+id/frameLayoutProposal"
+    android:layout_below="@+id/frameLayoutProposal"/>
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/cardview_light_background"
+    android:layout_margin="1px"
+    android:orientation="horizontal">
+
+    <EditText
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:isScrollContainer="true"
+        android:inputType="textMultiLine"
+        android:id="@+id/suggestionProposalEditText"
+        android:background="@color/cardview_light_background"
+        android:padding="5dp"
+        android:hint="Digite sua sugestão"/>
 
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:id="@+id/frameCardViewSegment"
-            android:background="@color/cardview_light_background"
-            app:cardElevation="7dp">
+    <Button
+        android:background="#2AC9AA"
+        android:layout_margin="1dp"
+        android:text="OK"
+        android:id="@+id/saveSuggestion"
+        android:textColor="#FFF"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
-                <LinearLayout
-                    android:padding="10dp"
-                    android:orientation="vertical"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+</LinearLayout>
 
-                    <TextView
-                        android:padding="10dp"
-                        android:textSize="16sp"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:text="Sugestão de proposta" />
+</LinearLayout>
 
-                    <EditText
-                        android:id="@+id/suggestionProposalEditText"
-                        style="@style/FullWidthEditText"
-                        android:scrollbars="vertical"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
-
-                </LinearLayout>
-
-        </android.support.v7.widget.CardView>
-
-        <Button
-            android:id="@+id/saveSuggestion"
-            android:background="@drawable/button_green"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:text="Salvar sugestão"/>
-
-    </LinearLayout>
-
-</FrameLayout>
