--- a/app/src/main/res/layout/fragment_view_segment.xml
+++ b/app/src/main/res/layout/fragment_view_segment.xml
@@ -73,7 +73,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:id="@+id/imageViewShare"
-                android:clickable="false"
+                android:clickable="true"
                 android:src="@drawable/share"
                 android:layout_alignTop="@+id/textViewNumberDislike"
                 android:layout_alignParentEnd="true"
