--- a/app/src/main/res/layout/fragment_view_bill.xml
+++ b/app/src/main/res/layout/fragment_view_bill.xml
@@ -32,6 +32,17 @@
                 android:layout_below="@+id/textViewTitleBill"
                 android:layout_alignParentStart="true" />
 
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:id="@+id/imageViewShare"
+                android:clickable="true"
+                android:src="@drawable/share"
+                android:layout_marginEnd="10dp"
+                android:layout_marginTop="15dp"
+                android:layout_below="@+id/textViewNumberProposal"
+                android:layout_alignParentEnd="true" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
