--- a/app/src/main/res/layout/activity_report.xml
+++ b/app/src/main/res/layout/activity_report.xml
@@ -10,6 +10,7 @@
 
     <TextView
         android:text="Erro"
+        android:id="@+id/textViewErro"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/background_floating_material_light"
@@ -21,6 +22,7 @@
         android:background="@color/background_floating_material_light" />
     <TextView
         android:text="Mensagem"
+        android:id="@+id/textViewMessage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/background_floating_material_light"
